update en-vi for home page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,19 @@
   "ongoing": "Ongoing",
   "search": "Search",
   "contact": "Contact",
-  "activity": "Activity in",
+  "activity": "Booking Activity in",
   "cancel": "Canceled",
-  "welcomeback": "WELCOME BACK"
+  "welcomeback": "WELCOME BACK",
+  "Jan": "Jan",
+  "Feb": "Feb",
+  "Mar": "Mar",
+  "Apr": "Apr",
+  "May": "May",
+  "Jun": "Jun",
+  "Jul": "Jul",
+  "Aug": "Aug",
+  "Sep": "Sep",
+  "Oct": "Oct",
+  "Nov": "Nov",
+  "Dec": "Dec"
 }
