update en-vi for people page + fix resend booking

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,5 +44,10 @@
   "drivers": "Drivers",
   "customers": "Customers",
   "fullNameCapital": "FULL NAME",
-  "phoneCapital": "PHONE NUMBER"
+  "phoneCapital": "PHONE NUMBER",
+  "seeDetail": "See Detail",
+  "fullName": "Full Name",
+  "name": "Name",
+  "license": "License Plate",
+  "activityHis": "Activity History"
 }
