add en-vi for history and booking page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,7 @@
   "search": "Search",
   "contact": "Contact",
   "activity": "Booking Activity in",
-  "cancel": "Canceled",
+  "canceled": "Canceled",
   "welcomeback": "WELCOME BACK",
   "Jan": "Jan",
   "Feb": "Feb",
@@ -60,5 +60,19 @@
   "motorcycle": "Motorcycle",
   "car": "Car",
   "paid": "Paid",
-  "unpaid": "Unpaid"
+  "unpaid": "Unpaid",
+  "createdAtCapital": "CREATED AT",
+  "statusCapital": "STATUS",
+  "none": "None",
+  "finding": "Finding Driver...",
+  "inTotal": "in total",
+  "filter": "Filter",
+  "showAll": "Show All",
+  "showMine" : "Show Mine",
+  "resend": "Resend",
+  "cancel": "Cancel", 
+  "onProgress": "On Progress",
+  "running": "Running",
+  "noDrivers": "No drivers accepted",
+  "addNew": "Add New"
 }
