--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -13,7 +13,7 @@
   "search": "Tìm kiếm",
   "contact": "Liên hệ",
   "activity": "Hoạt động đặt xe trong năm",
-  "cancel": "Đã hủy bỏ",
+  "canceled": "Đã hủy bỏ",
   "welcomeback": "CHÀO MỪNG TRỞ LẠI",
   "Jan": "Th1",
   "Feb": "Th2",
@@ -60,5 +60,19 @@
   "motorcycle": "Xe máy",
   "car": "Ô tô",
   "paid": "Đã thanh toán",
-  "unpaid": "Chưa thanh toán"
+  "unpaid": "Chưa thanh toán",
+  "createdAtCapital": "THỜI GIAN TẠO",
+  "statusCapital": "TRẠNG THÁI",
+  "none": "Không có",
+  "finding": "Đang tìm tài xế...",
+  "inTotal": "đơn tất cả",
+  "filter": "Bộ lọc",
+  "showAll": "Tất cả",
+  "showMine" : "Của tôi",
+  "resend": "Gửi lại",
+  "cancel": "Hủy bỏ",
+  "onProgress": "Đang xử lý",
+  "running": "Đang chạy",
+  "noDrivers": "Không có tài xế nào nhận đơn",
+  "addNew": "Thêm mới"
 }
