add en-vi for booking form

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,5 +74,24 @@
   "onProgress": "On Progress",
   "running": "Running",
   "noDrivers": "No drivers accepted",
-  "addNew": "Add New"
+  "addNew": "Add New",
+  "addNewBooking": "Add New Booking",
+  "guestDetail": "Guest Detail",
+  "note": "Note",
+  "bookingSummary": "Booking Summary",
+  "noInfo": "No information",
+  "km": "Kilometer",
+  "duration": "Duration",
+  "carService": "Car Service",
+  "vip": "VIP Booking",
+  "unknown": "Unknown",
+  "yes": "Yes",
+  "book": "BOOK",
+  "basicInfo": "Basic Information",
+  "pickup": "Pickup Location",
+  "noResult": "No results were found",
+  "destination": "Destination",
+  "pickupTime": "Pickup Time",
+  "guestNo": "No. of Guest", 
+  "apply": "Apply"
 }
