--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -74,5 +74,24 @@
   "onProgress": "Đang xử lý",
   "running": "Đang chạy",
   "noDrivers": "Không có tài xế nào nhận đơn",
-  "addNew": "Thêm mới"
+  "addNew": "Thêm mới",
+  "addNewBooking": "Thêm đơn đặt xe mới",
+  "guestDetail": "Thông tin khách hàng",
+  "note": "Ghi chú",
+  "bookingSummary": "Tóm tắt thông tin đặt xe",
+  "noInfo": "Chưa có thông tin",
+  "km": "Số km",
+  "duration": "Thời gian dự kiến",
+  "carService": "Dịch vụ xe",
+  "vip": "Dịch vụ VIP",
+  "unknown": "Không có thông tin",
+  "yes": "Có",
+  "book": "TÌM XE",
+  "basicInfo": "Thông tin đặt xe",
+  "pickup": "Điểm đón",
+  "noResult": "Không tìm thấy kết quả",
+  "destination": "Điểm đến",
+  "pickupTime": "Thời gian đón",
+  "guestNo": "Số lượng khách", 
+  "apply": "Áp dụng"
 }
