update carType and carService in cloud

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,5 +99,7 @@
   "messErrSubmit": "Submit fail!",
   "notification": "Notifications",
   "nonNoti": "No notifications yet.",
-  "markAll": "Mark all as read"
+  "markAll": "Mark all as read",
+  "car-4": "4-seater car",
+  "car-7": "7-seater car"
 }
