update status booking

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -71,9 +71,9 @@
   "showMine" : "Của tôi",
   "resend": "Gửi lại",
   "cancel": "Hủy bỏ",
-  "onProgress": "Đang xử lý",
-  "running": "Đang chạy",
-  "noDrivers": "Không có tài xế nào nhận đơn",
+  "onProgress": "Đang tìm tài xế",
+  "running": "Đang trên đường đi",
+  "noDrivers": "Không có tài xế nhận đơn",
   "addNew": "Thêm mới",
   "addNewBooking": "Thêm đơn đặt xe mới",
   "guestDetail": "Thông tin khách hàng",
