fix addbooking+add modal admin+capital 1st letter

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -101,5 +101,6 @@
   "nonNoti": "No notifications yet.",
   "markAll": "Mark all as read",
   "car-4": "4-seater car",
-  "car-7": "7-seater car"
+  "car-7": "7-seater car",
+  "errorMess": "Error when booking form"
 }
