--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -101,5 +101,6 @@
   "nonNoti": "Hiện không có thông báo nào.",
   "markAll": "Đọc tất cả",
   "car-4": "Xe bốn chỗ",
-  "car-7": "Xe bảy chỗ"
+  "car-7": "Xe bảy chỗ",
+  "errorMess": "Có lỗi khi đặt xe"
 }
