--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -105,5 +105,6 @@
   "errorMess": "Có lỗi khi đặt xe",
   "driverAccepted": "Tài xế đã nhận cuốc xe",
   "driverPickup-ing": "Tài xế đang đón khách",
-  "driverPickup": "Tài xế đã đón khách"
+  "driverPickup": "Tài xế đã đón khách",
+  "notFoundAdmin": "Không tìm thấy"
 }
