update status and carType

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -73,7 +73,7 @@
   "cancel": "Hủy bỏ",
   "onProgress": "Đang tìm tài xế",
   "running": "Đang trên đường đi",
-  "noDrivers": "Không có tài xế nhận đơn",
+  "noDrivers": "Chưa có tài xế nhận đơn",
   "addNew": "Thêm mới",
   "addNewBooking": "Thêm đơn đặt xe mới",
   "guestDetail": "Thông tin khách hàng",
